--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 misc-test/.settings/org.eclipse.jdt.ui.prefs
 misc/doc/**
 misc/.settings/org.eclipse.jdt.ui.prefs
+/bin/
+/target/
+/.classpath
+/.project
+/.settings/
