--- a/sample/json-parser/pom.xml
+++ b/sample/json-parser/pom.xml
@@ -1,10 +1,46 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+
   <parent>
     <groupId>com.jiganaut.bonsai</groupId>
     <artifactId>bonsai-sample</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
+
   <artifactId>json-parser</artifactId>
-  <name>json-parser</name>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>3.5.0</version>
+        <configuration>
+          <executable>java</executable>
+          <arguments>
+            <argument>--module-path</argument>
+            <modulepath />
+            <argument>--module</argument>
+            <argument>
+              com.jiganaut.bonsai.sample.json/com.jiganaut.bonsai.sample.json.JsonParserMain
+            </argument>
+          </arguments>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
+  <dependencies>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.jiganaut.bonsai</groupId>
+      <artifactId>bonsai-parser</artifactId>
+    </dependency>
+  </dependencies>
+
 </project>
